# rust-clean-architecture-v1

./: Cargo.toml
src/: main.rs
src/config/: mod.rs
src/controllers/: mod.rs  user_controller.rs
src/db/: mod.rs
src/models/: mod.rs  user.rs
src/routes/: user_routes.rs
