[package]
name = "rust-clean-architecture-v1"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.1"
actix-web = { version = "4.9.0",  default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.81"
chrono = "0.4.38"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
mysql = "25.0.1"

zstd-sys = { version = "2.0.13", default-features = false }
tower = "0.5.1"
 
 
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql" ] }
config = "0.14.0"
mockall = "0.13.0"
dotenv = "0.15.0"
 
